TT#75751 - Add enable/disable feature for Call Forwards
	 * Implement possibility to enable and disable
	   call forward rules in both UI and API

Change-Id: I8237a0695c5039b2edb4734003bb2a859bb8ee37

--- a/share/templates/subscriber/preferences.tt
+++ b/share/templates/subscriber/preferences.tt
@@ -110,6 +110,7 @@ $( document ).ready(function() {
                             <th>[% c.loc('Sources') %]</th>
                             <th>[% c.loc('To (B-Numbers)') %]</th>
                             <th>[% c.loc('New Destinations') %]</th>
+                            <th>[% c.loc('Enabled') %]</th>
 
                             [% # one for actions -%]
                             <th class="ngcp-actions-column"></th>
@@ -229,6 +230,12 @@ $( document ).ready(function() {
 
                                         [% idx = idx + 1 -%]
                                     [% END %]
+                                    <br/>
+                                [% END -%]
+                            </td>
+                            <td>
+                                [% FOR maps IN cf_destinations.${cf.type} -%]
+                                    [% IF maps.enabled == 1 %] yes [% ELSE %] no [% END %]
                                     <br/>
                                 [% END -%]
                             </td>
