TT#69380 - Disable search field caching only for Calls
	 * The search field was disabled because of long
	   time filtering duration when caching it for calls
	   but it is desirable to cache it in other places
	 * Added condition to not cache the field only in
	   calls table

Change-Id: I7a359c60f5fcc016fe37a587905ac06e2e81a366

--- a/share/templates/helpers/datatables.tt
+++ b/share/templates/helpers/datatables.tt
@@ -67,9 +67,11 @@ $(document).ready(function() {
         "bPaginate": [% helper.paginate || 'true' %],
         "bFilter": [% helper.filter || 'true' %],
         "bStateSave": true,
-        "stateSaveParams": function (settings, data) {
-            data.search.search = "";
-        },
+        [% IF helper.name == c.loc("Calls") %]
+            "stateSaveParams": function (settings, data) {
+                data.search.search = "";
+            },
+        [% END %]
         "iStateDuration": 0,
 
         "sPaginationType": "bootstrap",
