--- a/share/templates/widgets/reseller_topmenu_settings.tt
+++ b/share/templates/widgets/reseller_topmenu_settings.tt
@@ -11,6 +11,18 @@
 </li>
 <li class="dropdown">
     <a href="javascript:;" class="dropdown-toggle" data-toggle="dropdown">
+        <i class="icon-cog"></i>
+        <span>[% c.loc('Tools') | html %]</span>
+        <b class="caret"></b>
+    </a>
+    <ul class="dropdown-menu">
+        <li>
+            <a href="[% c.uri_for('/batchprovisioning') %]">[% c.loc('Batch Provisioning') %]</a>
+        </li>
+    </ul>
+</li>
+<li class="dropdown">
+    <a href="javascript:;" class="dropdown-toggle" data-toggle="dropdown">
         <i class="icon-th"></i>
         <span>[% c.loc('Settings') %]</span>
         <b class="caret"></b>
@@ -25,7 +37,7 @@
         <li><a href="[% c.uri_for('/subscriberprofile') %]">[% c.loc('Subscriber Profiles') %]</a></li>
         <li><a href="[% c.uri_for('/billing') %]">[% c.loc('Billing') %]</a></li>
         <li><a href="[% c.uri_for('/network') %]">[% c.loc('Billing Networks') %]</a></li>
-        <li><a href="[% c.uri_for('/package') %]">[% c.loc('Profile Packages') %]</a></li>           
+        <li><a href="[% c.uri_for('/package') %]">[% c.loc('Profile Packages') %]</a></li>
         <li><a href="[% c.uri_for('/invoicetemplate') %]">[% c.loc('Invoice Templates') %]</a></li>
         <li><a href="[% c.uri_for('/invoice') %]">[% c.loc('Invoices') %]</a></li>
         [% IF c.config.features.voucher -%]
